fixed weird page overflow bug (browser below min-width)

--- a/static_tmp/css/style.css
+++ b/static_tmp/css/style.css
@@ -72,6 +72,7 @@ body {
 }
 
 #container {
+    min-width:1024px;
 }
 
 .row {
